# wasmer-postgres

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config
.circleci/: config.yml
benchmarks/: fibonacci.rs  fibonacci.sql  fibonacci.wasm
examples/: foo.sql
src/: Makefile  foreign_data_wrapper.rs  instance.rs  lib.rs  wasm--0.1.0.sql  wasm.control  wasm.sql
src/foreign_data_wrappers/: exported_functions.rs  instances.rs  mod.rs
tests/: integration.rs
tests/sql/: _wasm_init.sql  select_wasm_instances.expected_output  select_wasm_instances.sql  wasm_exported_functions.expected_output  wasm_exported_functions.sql  wasm_instances.expected_output  wasm_instances.sql  wasm_new_instance.expected_output  wasm_new_instance.sql
